test-utils/tests/ui/too-many-func-parameters.stderr
warning: an associated function with this name may be added to the standard library in the future
   --> $DIR/validated_pool.rs:206:44
    |
206 |                     self.import_notification_sinks.lock().retain_mut(|sink| {
    |                                                           ^^^^^^^^^^
    |
    = note: `#[warn(unstable_name_collisions)]` on by default
    = warning: once this associated item is added to the standard library, the ambiguity may cause an error or change in behavior!
    = note: for more information, see issue #48919 <https://github.com/rust-lang/rust/issues/48919>
    = help: call with fully qualified syntax `retain_mut(...)` to keep using the current method

warning: unused return value of `Box::<T>::pin` that must be used
   --> $DIR/lib.rs:501:4
    |
501 |             Box::pin(futures::future::ready(TransactionImport::None));
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_must_use)]` on by default

error: No arguments expected for tests.
  --> $DIR/too-many-func-parameters.rs:20:1
   |
20 | async fn too_many_func_parameters(_: u32) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
